--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="via.vik.mydrawer.LoginActivity"
-    android:background="@color/bg_login"
+    android:background="@color/colorAccent"
     >
 
     <!-- Login progress -->
