--- a/app/src/main/res/layout/fragment_hobby_info.xml
+++ b/app/src/main/res/layout/fragment_hobby_info.xml
@@ -29,14 +29,13 @@
             android:text="Interests"
             android:layout_weight=".5"/>
 
-        <Spinner
-            android:textSize="@dimen/text_size"
-            android:layout_margin="5dp"
-            android:id="@+id/spi_interest"
+        <via.vik.mydrawer.Widgets.MultiSpinner
+            android:id="@+id/multi_spinner_interests"
+            android:textAlignment="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:enabled="false"/>
+            android:enabled="false"
+            ></via.vik.mydrawer.Widgets.MultiSpinner>
 
     </LinearLayout>
 
@@ -58,15 +57,13 @@
             android:text="Fav. Reads"
             android:layout_weight=".5"/>
 
-        <Spinner
-            android:textSize="@dimen/text_size"
-            android:layout_margin="5dp"
-            android:id="@+id/spi_fav_reads"
+        <via.vik.mydrawer.Widgets.MultiSpinner
+            android:id="@+id/multi_spinner_fav_reads"
+            android:textAlignment="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:enabled="false"/>
-
+            android:enabled="false"
+            ></via.vik.mydrawer.Widgets.MultiSpinner>
     </LinearLayout>
 
     <LinearLayout
@@ -86,15 +83,13 @@
             android:text="Fav. Music"
             android:layout_weight=".5"/>
 
-        <Spinner
-            android:textSize="@dimen/text_size"
-            android:layout_margin="5dp"
-            android:id="@+id/spi_fav_music"
+        <via.vik.mydrawer.Widgets.MultiSpinner
+            android:id="@+id/multi_spinner_fav_music"
+            android:textAlignment="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:enabled="false"/>
-
+            android:enabled="false"
+            ></via.vik.mydrawer.Widgets.MultiSpinner>
     </LinearLayout>
 
 
@@ -118,14 +113,13 @@
             android:text="Fav. Cuisines"
             android:layout_weight=".5"/>
 
-        <Spinner
-            android:textSize="@dimen/text_size"
-            android:layout_margin="5dp"
-            android:id="@+id/spi_fav_cuisines"
+        <via.vik.mydrawer.Widgets.MultiSpinner
+            android:id="@+id/multi_spinner_fav_cuisines"
+            android:textAlignment="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:enabled="false"/>
+            android:enabled="false"
+            ></via.vik.mydrawer.Widgets.MultiSpinner>
 
     </LinearLayout>
 
@@ -146,14 +140,13 @@
             android:text="Sports Fitness Activites"
             android:layout_weight=".5"/>
 
-        <Spinner
-            android:textSize="@dimen/text_size"
-            android:layout_margin="5dp"
-            android:id="@+id/spi_fitness_activites"
+        <via.vik.mydrawer.Widgets.MultiSpinner
+            android:id="@+id/multi_spinner_fitness_activites"
+            android:textAlignment="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:enabled="false"/>
+            android:enabled="false"
+            ></via.vik.mydrawer.Widgets.MultiSpinner>
 
     </LinearLayout>
 
@@ -175,14 +168,13 @@
                 android:text="Preferred Dressing Style"
                 android:layout_weight=".5"/>
 
-            <Spinner
-                android:textSize="@dimen/text_size"
-                android:layout_margin="5dp"
-                android:id="@+id/spi_preferred_Dressing_style"
+            <via.vik.mydrawer.Widgets.MultiSpinner
+                android:id="@+id/multi_spinner_pref_dressing_style"
+                android:textAlignment="center"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:enabled="false"/>
+                android:enabled="false"
+                ></via.vik.mydrawer.Widgets.MultiSpinner>
 
         </LinearLayout>
 
@@ -204,14 +196,13 @@
                 android:text="Preferred Movies"
                 android:layout_weight=".5"/>
 
-            <Spinner
-                android:textSize="@dimen/text_size"
-                android:layout_margin="5dp"
-                android:id="@+id/spi_preferred_movies"
+            <via.vik.mydrawer.Widgets.MultiSpinner
+                android:id="@+id/multi_spinner_pref_movies"
+                android:textAlignment="center"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:enabled="false"/>
+                android:enabled="false"
+                ></via.vik.mydrawer.Widgets.MultiSpinner>
 
         </LinearLayout>
 
