--- a/app/src/main/res/layout/fragment_profession_preferences.xml
+++ b/app/src/main/res/layout/fragment_profession_preferences.xml
@@ -29,14 +29,13 @@
                 android:text="Educational Level"
                 android:layout_weight=".5"/>
 
-            <Spinner
-                android:textSize="@dimen/text_size"
-                android:layout_margin="5dp"
-                android:id="@+id/spi_educational_level"
+            <via.vik.mydrawer.Widgets.MultiSpinner
+                android:id="@+id/multi_spinner_education_level"
+                android:textAlignment="center"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:enabled="false"/>
+                android:enabled="false"
+                ></via.vik.mydrawer.Widgets.MultiSpinner>
 
         </LinearLayout>
 
@@ -58,15 +57,13 @@
                 android:text="Eduction Field"
                 android:layout_weight=".5"/>
 
-            <Spinner
-                android:textSize="@dimen/text_size"
-                android:layout_margin="5dp"
-                android:id="@+id/spi_education_field"
+            <via.vik.mydrawer.Widgets.MultiSpinner
+                android:id="@+id/multi_spinner_education_field"
+                android:textAlignment="center"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:enabled="false"/>
-
+                android:enabled="false"
+                ></via.vik.mydrawer.Widgets.MultiSpinner>
         </LinearLayout>
 
         <LinearLayout
@@ -86,14 +83,13 @@
                 android:text="Working With"
                 android:layout_weight=".5"/>
 
-            <Spinner
-                android:textSize="@dimen/text_size"
-                android:layout_margin="5dp"
-                android:id="@+id/spi_working_with"
+            <via.vik.mydrawer.Widgets.MultiSpinner
+                android:id="@+id/multi_spinner_working_with"
+                android:textAlignment="center"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:enabled="false"/>
+                android:enabled="false"
+                ></via.vik.mydrawer.Widgets.MultiSpinner>
 
         </LinearLayout>
 
