--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -1,5 +1,6 @@
 <ListView android:id="@+id/list_item1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@color/bg_login"
     xmlns:android="http://schemas.android.com/apk/res/android"
 />
